# prak7

./: .gitignore  .gitmodules  Addons.xcu  LICENSE  ProtocolHandler.xcu  ProtocolHandlerExtension.oxt  README.md  addon.cxx  component.cxx
prak4/: CMakeLists.txt  Genetic.cpp  Genetic.h  GoL.h  HeadCycle.cpp  HeadCycle.h  Results.xlsx  main.cpp  Задание4_ГА.txt
task1/: Makefile  addon.cxx  addon.hxx  task.md
task2/: .report.txt.swp  CMakeLists.txt  analyze.py  main.cpp  report.txt  task.md  test.xml  testrun.sh
task2/AnnealingSim/: AnnealingSim.h
task2/Mutation/: MutationScheduler.cpp  MutationScheduler.h  MutationVirtClass.h
task2/ParamsGenerator/: CMakeLists.txt  main.cpp
task2/Solution/: SolutionScheduler.cpp  SolutionScheduler.h  SolutionVirtClass.h
task2/Temperature/: Temp.h  TempVirtClass.h
task3/: CMakeLists.txt  CustomMath.h  library.h  main.cpp  unittests.cpp
task3/Function/: Function.cpp  Function.h
